force-app/main/default/objects/AdditionalRevenue__c/AdditionalRevenue__c.object-meta.xml
<CustomObject>
    <label>Additional Revenue</label>
    <nameField>
        <label>Revenue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Additional Revenues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>