force-app/main/default/objects/AdditionalRevenue__c/fields/DateIncurred__c.field-meta.xml
<CustomField>
    <fullName>DateIncurred__c</fullName>
    <label>Date Incurred</label>
    <type>DateTime</type>
</CustomField>