force-app/main/default/objects/AdditionalRevenue__c/fields/MonthlyRepeatable__c.field-meta.xml
<CustomField>
    <fullName>MonthlyRepeatable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monthly Repeatable</label>
    <type>Checkbox</type>
</CustomField>