force-app/main/default/objects/AdditionalRevenue__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Type</fullName>
            </value>
            <value>
                <fullName>KFZ(1% Regelung)</fullName>
            </value>
            <value>
                <fullName>Dividenden</fullName>
            </value>
            <value>
                <fullName>Andere</fullName>
            </value>
            <value>
                <fullName>Traveling expenses refund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>